--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --loader ts-node/esm index.ts"
   },
   "keywords": [],
   "author": "chenaski <mail2chenaski@gmail.com",
   "license": "ISC",
   "dependencies": {
     "jsdom": "^19.0.0",
-    "playwright": "^1.18.0"
+    "playwright": "^1.18.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "prettier": "^2.5.1"
   }
 }
