--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --loader ts-node/esm index.ts"
+    "start": "node --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "chenaski <mail2chenaski@gmail.com",
