--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,json,md}": "prettier -w"
+  },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
-    "prettier": "^2.5.1"
+    "lint-staged": "^12.3.3",
+    "prettier": "^2.5.1",
+    "simple-git-hooks": "^2.7.0"
   }
 }
